Added DSL defintitions top down